--- a/RDE05_index_base.html
+++ b/RDE05_index_base.html
@@ -78,6 +78,7 @@
            <a href="mailto:contato@contato.com.br"> contato@contato.com.br</a>
          </p> 
 
+        <a href="RDE09-Mariele_Longato.html">RDE09 - Multimídias</a>
 
 </body>
 </html>
