--- a/RDE05_index_base.html
+++ b/RDE05_index_base.html
@@ -79,6 +79,7 @@
          </p> 
 
         <a href="RDE09-Mariele_Longato.html">RDE09 - Multimídias</a>
+        <a href="RDE10-Mariele_Longato.html">RDE10 - CSS</a>
 
 </body>
 </html>
