--- a/RDE10-Mariele_Longato.html
+++ b/RDE10-Mariele_Longato.html
@@ -25,17 +25,20 @@
         Os código CSS são definidos dentro de uma tag HTML.
         Afetam somente a tag em que foi definida.
     </p>
+    <a href="RDE10-CSS_inline.html">Clique aqui!</a>
     
     <h3>Incorporado ou Internal</h3>
     <p>
         Os código CSS são definidos no cabeçalho, dentro da tag head.
         Afetam somente o documento em que foi definido.
     </p>
+    <a href="RDE10-CSS_Incorporado.html">Clique aqui!</a>
 
     <h3>Externo</h3>
     <p>
         Os código CSS são definidos em um arquivo externo.
         Afetam todos os documentos ue estão linkado ao CSS.
     </p>
+    <a href="RDE10-CSS_Externo.html">Clique aqui!</a>
 </body>
 </html>
