--- a/RDE11-CSS_Seletores.html
+++ b/RDE11-CSS_Seletores.html
@@ -7,6 +7,7 @@
     <title>Seletores Personalizados</title>
     <link rel="stylesheet" href="RDE_estilo.css">
 </head>
+<body>
     <h1 id="principal">Elementos block-level, inline e Seletores Personalizados</h1>
 
     <div class="agrupamento">
