--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
            <a href="mailto:contato@contato.com.br"> contato@contato.com.br</a>
          </p> 
 
-        <a href="RDE09-Mariele_Longato.html">RDE09 - Multimídias</a>
-        <a href="RDE10-Mariele_Longato.html">RDE10 - CSS</a>
+        <a href="RDE09-Mariele_Longato.html">RDE09 - Multimídias</a><br>
+        <a href="RDE10-Mariele_Longato.html">RDE10 - CSS</a><br>
+        <a href="RDE11-CSS_Seletores.html">RDE11 - Seletores Personalizados</a>
 
 </body>
 </html>
