--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <a href="RDE09-Mariele_Longato.html">RDE09 - Multimídias</a><br>
         <a href="RDE10-Mariele_Longato.html">RDE10 - CSS</a><br>
         <a href="RDE11-CSS_Seletores.html">RDE11 - Seletores Personalizados</a>
+        <a href="RDE12-Mariele_Longato.html">RDE12 - BoxModel</a>
 
 </body>
 </html>
