--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <a href="RDE10-Mariele_Longato.html">RDE10 - CSS</a><br>
         <a href="RDE11-CSS_Seletores.html">RDE11 - Seletores Personalizados</a>
         <a href="RDE12-Mariele_Longato.html">RDE12 - BoxModel</a>
+        <a href="RDE14-Layouts.html">RDE14 - Layouts</a>
 
 </body>
 </html>
